[nb] Edit: 20211215152829.md

--- a/20211215152829.md
+++ b/20211215152829.md
@@ -62,3 +62,28 @@ https://qiita.com/sakazuki/items/aff43a8c4d4571600404
 それ以下なら Fargate がお得
 
 ゲームのみならず、ステートフルなアプリケーション全てに適用できそう
+
+# 参考
+https://labs.gree.jp/blog/2016/06/16024/
+
+チャットアプリ程度なら WebSocket で十分、ロードバランサを通しても使える
+ただ、もっとリアルタイムな場合は
+- DBの負担
+- メッセージパスの分散化(ロードバランサを通すため、同じサーバーに通信するクライアント同士が接続すると限らない)
+が必要
+
+> となると、いっそのことゲームの処理はステートフルにして、ロードバランサを使わずに端末側でなんらかの指示によりアクセス先を切り替える手法のほうが効率よくなります。
+まさにこのアプローチ
+
+このページの下の方にコンテナ利用の図が載ってるが、
+ContainerHost があって Dynamic Port Mapping している図より、
+EC2 instance かつ `host`, `bridge` ネットワークモードでの運用と思われる
+
+
+> コンテナホスト自体は EC2 で運用しなければなりません。一方で AWS Lambda のようなフルマネージドサービスもあるのでこの課題もじきに解決されることでしょう。
+
+Fargate と違い、フルに EC2 Instance を使い切らないと損なのと、スケールアウトをどうするかという問題がつきまとう
+https://aws.amazon.com/jp/autoscaling/
+
+AutoScaling というサービスを使うと良いかも
+ただし、最低料金は Fargate のほうが易そうというのが否めない
