[nb] Edit: 20211219023609.md

--- a/20211219023609.md
+++ b/20211219023609.md
@@ -85,3 +85,31 @@ OpenAPI v3.x 系から、 requestBody フィールドを使うことで multipar
 
 formData の仕様をよく確認
 openapiではできないけど、仕様的に許されてる場合があるかも
+
+
+# CLI Validate
+
+検索して一番上に出てきたやつ
+https://apitools.dev/swagger-cli/
+
+- Nodejs ベースの swagger-cli ツールでバリデーションできる
+- マルチファイル定義もサポート ($def pointer による)
+- コマンドにより、複数のOpenAPI ファイルを1つにバンドルすることも可能
+
+package.json に依存を追加して、 npm scripts でバンドルするのが良さげ
+
+
+
+# Swagger / OpenAPI 定義ファイルの分割
+OpenAPI は、仕様で定義ファイルの分割記述・参照に対応している
+書き方
+
+- `#/...` で書くと自分のファイル内の定義を参照する
+- `./...` (普通の相対パス)で書くとそのファイル全体を埋め込む
+
+あんまり器用なことはできない
+ファイル全体の埋め込みしかできない
+変な書き方をするとダメそう
+YAML の保管も聞かない
+
+使うとしたら、 `path`, `component`, `info` 辺り
