[nb] Edit: 20211219143850.md

--- a/20211219143850.md
+++ b/20211219143850.md
@@ -18,3 +18,6 @@ modifier がついてるとアニメーションが微妙に重い
 非破壊で後で調整したい場合は適用しないでおく
 - animation はアニメーション専用のリグで作成し、後でリマップするのもあり
 
+# めり込み問題
+本当の意味で服が体にめり込まないようにするには、collision などを設定してやるほかない
+体に付随する肌着、上着、下着程度なら、人間の関節の曲がりの限界程度なら問題ないので特に考えない
