--- a/20211220171514.md
+++ b/20211220171514.md
@@ -19,7 +19,9 @@ awesome deno とか見れば大体書いてある
   - 必要十分
 - Ff00ff/mammoth
   - type safe な Postgresql クエリビルダー
-
+- halvardssm/deno-nessie
+  - Postgres, MySQL, MaridaDB, SQLite に対応したマイグレーションライブラリ
+  - denodrivers/postgres をバックエンドに使ってる
 
 # クエリビルダー(またはORM)は使ったほうが良いのか、使わないほうが良いのか？
 - https://medium.com/@timakin/%E6%9C%80%E8%BF%91-%E3%82%AF%E3%82%A8%E3%83%AA%E3%83%93%E3%83%AB%E3%83%80%E3%83%BC%E3%82%92%E4%BD%BF%E3%81%86%E3%81%AE%E3%81%8C%E3%81%A0%E3%82%8B%E3%81%84-fdb9b31ad3b0
@@ -36,5 +38,6 @@ SQLインジェクションは簡単に防げる
 
 slonik の場合、 `sql` テンプレートリテラルのみでしかSQLを構築できず、動的なSQL文の生成を制限している
 ので安心
+
 
 
