[nb] Edit: 20211129134154.md

--- a/20211129134154.md
+++ b/20211129134154.md
@@ -748,3 +748,9 @@ Text Widget のプロパティ
 
 
 
+# UI Detail: Is Variable
+
+UI Widget の BP クラスは Designer > Graph の2つのワークふｒ−がある
+Designerのヒエラルキーに追加されているウィジェットのDetailから IsVariable をチェックすると、Graph の方でも Variable に追加されて色々プロパティをBPで操作できるようになる
+- Message の Text
+- Widget の visibility
