[nb] Edit: 20220101223120.md

--- a/20220101223120.md
+++ b/20220101223120.md
@@ -19,8 +19,9 @@ https://hasura.io/docs/latest/graphql/core/getting-started/docker-simple.
 既に作成してあるDBに接続して、graphql API化できる
 
 - localhost:8080 からダッシュボードを開く
-- Database > add database
+- Database > connect database
   - postgres://~~ 形式のurlで追加
+  - docker-compose でやっている場合はサービス名ホストで接続可能
     - この形式は psql でlogin or スクリプトを読ませて実行するのにも使える(メイン引数として)
 - 追加したDB > schema を選択
 - tableを選択 > trace
@@ -70,4 +71,28 @@ mutation {
 }
 ```
 
+# DB page
 
+- Browse Rows
+- Insert Row
+- Modify
+  - ALTER TABLE 文をGUI実行する感じ
+- Relationships
+- Permission
+  - Role, Policy
+
+DB のテーブルを作成したり、データを Insert したり Update したり
+いろいろ操作したりできる
+
+DB のスキーマを操作した結果がマイグレーションファイルなどに記憶されるわけではないので、遊びでいじる以外の目的であればあんまりやる必要はない。
+(migrationツールでDBを直接弄った後linkしたほうが良い)
+
+
+# 対応DB
+- Postgres
+- BigQuery
+
+使わなさそうなの : MS SQL Server, MySQL, Citus/Hyperscale
+
+
+# 
