[nb] Edit: 20220103170214.md

--- a/20220103170214.md
+++ b/20220103170214.md
@@ -16,6 +16,25 @@ https://zenn.dev/msorz/articles/47b47acedb3c5e#%F0%9F%91%89-%E3%83%95%E3%82%A1%E
 理想的なのは 3
 1 はBase64 Encode で3割くらいデータがでかくなる
 
+# GraphQLサーバーの REST化
+
+予め登録したgraphql queryをREST API化する機能
+
+1. Hasura Console > GraphiQL で `REST`ボタンを押す
+2. 現在入力してあるgraphqlに追加情報を入力していく
+- Name (operation name相当)
+- Description
+- Location(`hasura_root/api/rest` 以降のパス)
+- Method
+3. Create Endpoint
+
+ポイント
+- おそらくだが、Query, Path, Body パラメータに対応している
+  - GET の場合は query と path が使えた (path は `:<param name>`)
+  - POST, PUT, PATCH は試してない
+  - クエリの引数を定義しておく。それと同名のフィールドを含めるようにする
+
 
 # REF
 https://zenn.dev/msorz/articles/47b47acedb3c5e
+https://zenn.dev/yuno_miyako/articles/db0a1918a785c9
