[nb] Edit: 20211231090339.md

--- a/20211231090339.md
+++ b/20211231090339.md
@@ -7,3 +7,28 @@ jose 一択 (jwt.io でも紹介されてる)
 - jose
   - 活発にコミット
   - jwt.io で紹介されてる
+
+
+# importSPKI が動かない問題
+
+jose.importSPKI 関数が、Deno 1.16.0 以前だと動かないっぽい
+
+```typescript
+import * as oak from "oak";
+import * as jose from "jose";
+
+const alg = "RS256";
+const pem = Deno.env.get("PUB_KEY_PEM")!;
+const pubKey = await jose.importSPKI(pem, alg);
+
+export const authMiddleware: oak.Middleware = async (ctx, next) => {
+  const jwt =
+    "eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiYWRtaW4iOnRydWUsImlhdCI6MTUxNjIzOTAyMn0.NHVaYe26MbtOYhSKkoKYdFVomg4i8ZJd8_-RU8VNbftc4TSMb4bXP3l3YlNWACwyXPGffz5aXHc6lty1Y2t4SWRqGteragsVdZufDn5BlnJl9pdR_kdVFUsra2rWKEofkZeIC4yWytE58sMIihvo9H1ScmmVwBcQP6XETqYd0aSHp1gOa9RdUPDvoXQ5oqygTqVtxaDr6wUFKrKItgBMzWIdNZ6y7O9E0DhEPTbE9rfBo6KTFsHAZnMg4k68CDp2woYIaXbmYTWcvbzIuHO7_37GT79XdIwkm95QJ7hYC9RiwrV7mesbY4PAahERJawntho0my942XheVLmGwLMBkQ";
+
+  const { payload, protectedHeader } = await jose.jwtVerify(jwt, pubKey);
+  console.log(payload);
+  console.log(protectedHeader);
+
+  await next();
+};
+```
