[nb] Add: 20220110224543.md

--- a/20220110224543.md
+++ b/20220110224543.md
@@ -44,5 +44,190 @@ Actor 作成 -> Component 作成
 
 Unreal Engine は一種のフレームワークであり、独自クラスは Unreal Engine クラスを拡張することで作れる
 
+# Actor, Pawn, Character
+
+- Actor: world に spawn されるオブジェクトの単位
+- Pawn: Actor を拡張。物理的な存在(Player, Creature)。入力を受け付ける。Player or AI により操作される
+- Character: Pawn を拡張。
+  - Mesh をもつ
+  - Collision をもつ
+  - 基礎的な動き、ネットワーキング、入力モデルの実装を持つ
+    - CharacterMovementComponent に実装されてる
+  - 他のPawnとの物理的接触をする責務を持つ
+
+Actor > Pawn > Character
+
+# Compoenent
+
+主要な　Component class 2つ
+
+- Scene Compoenent
+  - 様々な異なるタイプの Actor に付けられる
+  - Transform を持つ (world 上での位置)
+  - Mesh や Collision をもつ責務はない
+    - Actor に対するアタッチメントの位置を指定するダミー座標として使える
+- Actor Component
+  - Mesh や Collision を持つ
 
 
+# Character をさらに Sub class 化
+
+デフォルトで Epic が用意してくれたものを使ってもゲームは作れるが、
+こだわりとか作り込みができない
+
+Character class を継承して更に新しいクラスを作る
+
+
+# GameMode
+
+Project Settings > Maps & Modes
+
+GameMode のトグルを開くといくつかクラスが設定されている
+
+- Default Pawn
+- HUD
+- Player Controller
+- Game State
+- Spectator
+
+# Player Controller
+
+デフォルトで `Project名Character.h/cpp` というソースが作られている
+中身を見ると、
+- constructor: 初期値の設定
+- SEtupPlayerInputComponent: Action と Method のバインディング
+- etc...
+
+が行われている
+
+Pawn クラスに実装されているメソッドやプロパティを使って、Characterを動かしている
+Pawn.
+  - AddMovementInput
+  - Controller->GetControlRotation
+
+AddMovementComponent の中身を見てみると、
+`UPawnMovementComponent` が Pawn にアタッチされている場合はその`AddInputVector()`メソッドを使い、
+そうでない場合は Pawn に内蔵される `Internal_AddMovementInput()` メソッドを使う
+
+自分で UPawnMovemntComponent を作ることで動きをカスタマイズできるってこと？
+
+# Action & Axis
+- Action: 1shotの入力
+- Axis : 強さのある入力
+
+
+# .uproject ファイル
+
+中身は JSON
+`Modules` というフィールドには、依存するモジュールの情報が書いてあり、
+デフォルトだと作成した `Project名` が入ってる
+
+# Engine Modules
+
+Solution file を開いたときの `Engine` 側には色々入ってる
+それぞれが `Module` である
+Source > Editor > 
+- `BlueprintGraph`
+- `AIGraph`
+- `EditorStyle`
+
+などなど
+これら全ては単なるモジュール
+自分が書くC++プロジェクトもモジュール
+
+プロジェクト名のソリューションファイルにある、`Project名.cpp` には自分が書いたModuleを`PRIMARY_GAME_MODULE`として実装するマクロが書いてある
+
+# Unreal Engine の C# ファイル
+
+ビルドツールのスクリプトとして使われている
+
+```cs
+// <Project>.Build.cs
+PublicDependencyModuleNames.AddRange(new string[] { "Core", "CoreUObject", "Engine", "InputCore", "HeadMountedDisplay" });
+```
+
+エンジンが用意しているモジュールを依存関係として読み込む処理が入ってる
+HeadMountedDisplay モジュールで VR ゲームもできることを示してる
+
+```cs
+// <Project>.Target.cs
+public BRCPPTarget(TargetInfo Target) : base(Target)
+{
+  Type = TargetType.Game;
+  DefaultBuildSettings = BuildSettingsVersion.V2;
+  ExtraModuleNames.Add("BRCPP");
+}
+```
+
+ゲームを記述するモジュール自体を読み込む
+(Extra Module)
+
+Engine 内に書くC++コードが、ゲームロジック含め全て Module であるという考え方を知っておくのは重要
+
+
+.Target.cs はビルドする先に応じて増えたりする
+- Editor : デバッグ実行用ターゲット
+- Server : ListenServer, DedicatedServer
+
+知らなくてもいいけど知っとくとお得
+
+# Unreal C++
+
+普通のC++で使わないようなのがたくさん出てくる
+
+## UPROPERTY マクロ
+
+C++ のクラスメンバ変数、関数の引数の情報
+エディタから、C++ class のプロパティを操作するための一工夫
+
+Unity の C# Serialize
+Godot の export var のようなもの
+
+https://www.ayumax.net/entry/2020/03/22/144226/
+
+# U ってなに？
+UObject class を継承するものは全て U というprefixをクラス名につける
+
+# Inherited class's Initial Prefix
+Unreal C++ 内部では、継承したclassのイニシャルをprefixにする習慣が適用される場所が多い
+
+Actor -> APawn -> ACharacter
+
+# FPROPERTY vs UPROPERTY
+
+UPROPERTY マクロで宣言したメンバーは、UObject を継承するプロパティになるので Gabage Collector で管理されパフォーマンスに悪影響
+(履き対象チェックが多くなる)
+
+FPROPERTY は UObject を継承しなくなったのでパフォーマンスが良い
+
+
+一応 UPROPERTY でも動く
+
+# UCLASS マクロ
+
+全ての Unreal Engine のクラス記述は UCLASS マクロの下に書かれる
+
+# UPROPERTY の引数
+
+- Visible~
+  - Anyware
+  - DefaultsOnly
+  - InstanceOnly
+  - Unreal エディタ上では見えるが、全く編集できない
+  - Character の TurnRate とかが編集できないのはこれのせい
+- Edit~
+  - Anyware
+  - 見えるし編集できる
+
+- Blueprint~
+  - ReadOnly
+- Category
+  - エディタ上のアイコン
+- meta
+  - さらなる設定
+
+C++ の IDE を使っていればこれらの引数の定義へジャンプして、どのように動くのかを見れる
+
+# UPROPETY(FPROPERTY)を設定する意義
+デザイナーがエディタ上で指定できる値を制限するため
+(ゲームが壊れないように)
