[nb] Edit: 20220110224543.md

--- a/20220110224543.md
+++ b/20220110224543.md
@@ -239,5 +239,4 @@ void ABRCPPCharacter::SetupPlayerInputComponent(class UInputComponent* PlayerInp
 ```
 
 実装の中に上記の様なメソッドがある
-
-
+メソッドを Action にバインドすると、そのアクションが発生したときに呼び出される
