[nb] Edit: 20220116224239.md

--- a/20220116224239.md
+++ b/20220116224239.md
@@ -7,3 +7,10 @@ Godot で使いやすいように fbx 関連を処理する Blender Addon
 - Root bone を追加する
   - Root motion の location を移動
 - アニメーションをまとめる
+
+# Blender 3.0 において
+なぜか、うまく使えない
+
+2.8 がベスト、せめて 2.9 で使う
+
+Application にインストールしないで使うのもあり
