[nb] Edit: 20220116224239.md

--- a/20220116224239.md
+++ b/20220116224239.md
@@ -14,3 +14,18 @@ Godot で使いやすいように fbx 関連を処理する Blender Addon
 2.8 がベスト、せめて 2.9 で使う
 
 Application にインストールしないで使うのもあり
+
+
+# やってくれること
+
+要するに root bone の生成
+fbx を選択したら armature のアニメーションだけ抽出
+NLA エディターにアニメーションを追加
+
+ただし、GGT ツールの流儀で import / export する
+Better FBX importer などでインポートしたボーンには使えないので、組み合わせに乏しい
+
+# bug?
+メッシュが一つしかインポートされない
+(YBot の場合関節がない)
+
