[nb] Edit: 20220116224239.md

--- a/20220116224239.md
+++ b/20220116224239.md
@@ -29,3 +29,19 @@ Better FBX importer などでインポートしたボーンには使えないの
 メッシュが一つしかインポートされない
 (YBot の場合関節がない)
 
+
+# 使う意義
+要するに、Root Motion を保ちつつ fbx をエクスポートしたい場合に便利
+
+# root motion vs code movement
+
+- ゲーム業界的にはボーンに root motion を付けて移動させるのが主流
+  - スリップやズレなど、コードで移動させると破綻したように見えることがある
+  - ボーンの動き = root motion によって移動させれば、アニメーションツールで作ったのと同じ動きがゲームエンジン上でも再生され、リアルに見える
+    - はしご上り
+    - 台座上り
+    - 歩き、走り
+    - etc...
+
+
+
