[nb] Edit: 20220118000159.md

--- a/20220118000159.md
+++ b/20220118000159.md
@@ -1,8 +1,27 @@
-# Enjin
+# Enjin Coin
 
-#NFT #Ethereum
+#cryptocurrency #NFT #Ethereum
 
-Non-Fungible Tokens の一種
+イーサリアムベースの暗号通貨
+
+ENJ
+
+Non-Fungible Tokens を作るのによく使われる
 (ノンファンジブルトークン)
 
 主に、ゲームで使われることを目的とする
+
+# FAQ
+
+- NFT を作るのにコーディング必要？
+  - Engin に置いては、GUIでできるので不要
+  - プロジェクトに統合するにはコーディングが必要
+- 無料？
+  - GUI mint interface, API, SDK ,開発ツールは完全無料
+  - イーサリアムからNFTをmintingするのに、ある程度必要
+    - ネットワーク手数料を払うための ethereum
+    - NFT 鋳造材料の Engin Coin
+  - JumpNet を使うと 僅かな Engin Coin があれば NFT を鋳造できる
+- 開発者コミュニティ
+  - Slack
+- 
