[nb] Edit: 20220118113541.md

--- a/20220118113541.md
+++ b/20220118113541.md
@@ -46,6 +46,10 @@ Node.js が ES ひいては .mjs に対応したことで
   - 主にビルド後のサイズ、実行時の快適性に影響が出る
 
 
+- __dirname, __filename などの Node 特有のグローバル変数は使えない
+  - ESM 特有の import.meta を使う
+
 # 参考
 https://blog.jxck.io/entries/2017-08-15/universal-mjs-ecosystem.html
 https://postd.cc/the-state-of-javascript-modules/
+https://blog.hiroppy.me/entry/nodejs-esm
