[nb] Edit: 20220118171351.md

--- a/20220118171351.md
+++ b/20220118171351.md
@@ -6,3 +6,69 @@
 
 XML API で利用できる
 SDK があるので使える場合はそっちを使ったほうが良い
+
+# 用語
+
+- APPID
+  - COS にアクセスするためのユーザーレベルのID. Manage API Key で取得
+  - https://console.intl.cloud.tencent.com/cam/capi
+  - SecretId
+    - 開発者固有のSecretId. Project に対して付与される
+    - これも Manage Api Key から
+  - SecretKey
+    - 開発者が持つべき秘密鍵
+- Bucket
+  - データ格納に使うコンテナ単位
+- Object
+  - ファイル
+  - 以下の3要素で構成される
+    - ObjectKey: Object のユニークID = URL とみなせる
+    - Value : ファイルの中身
+    - Metadata : Key-Value で付与できるオブジェクトの属性
+- Region
+  - 地域
+  - ap-tokyo かな？
+- ACL
+  - Access Control List
+  - 特定IPをブロックするとか
+- CORS
+  - Cross-origin resource sharing
+- Multipart Upload
+  - Tencent Cloud COS が提供するアップロードモード
+- Object content = バイナリ
+
+# 使い方
+
+- COS console を有効化
+- COS コンソールから バケット作成
+- CAM console から、APPID, SecretId, SecretKey を確認
+- request signature algorithm program を書く
+  - 要するに、署名を行うためのコード
+- API を叩く
+CAM = Cloud Access Management
+
+
+# Request Signature
+
+https://intl.cloud.tencent.com/document/product/436/7778
+
+リクエストの署名
+
+2種類のリクエスト
+- anonymous request
+  - 認証情報を含まず、RESTful API で送信される
+- signed request
+  - 署名を含む HTTP request
+  - COS はこちらを使う
+
+HMAC に基づく認証を使う
+Hash Message Authentication Code
+
+# Implement Signature
+
+SDK では既に署名が実装されてるので、署名の問題は無視できる
+ただし、SDKを利用しない場合にも SDK の認証コードを参考にして書くことができる
+
+https://intl.cloud.tencent.com/document/product/436/7778
+
+上のページに有る SDK ソースを参考にする
