[nb] Edit: 20220118231039.md

--- a/20220118231039.md
+++ b/20220118231039.md
@@ -1,1 +1,102 @@
-RediSearch
+# RediSearch
+
+#redis
+
+RediSearch とは、 Redis にインデックスや全文検索機能などを追加するプラグイン
+
+Redis はモジュールシステムがあり、C言語で書かれたモジュールをロードできる。(速い)
+
+
+# Install
+
+Docker の場合、モジュールが含まれている redis image を使う
+
+```yaml
+version: "3.9"
+services:
+  redis:
+    image: "redislabs/redisearch:latest"
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./data:/data
+```
+
+# Tutorial
+
+https://developer.redis.com/howtos/redisearch/
+
+まず、`<prefix>:*`のキーを持つハッシュをHSETする
+
+```sh
+HSET movies:11002 title "Star Wars: Episode V - The Empire Strikes Back" plot "Luke Skywalker begins Jedi training with Yoda." release_year 1980 genre "Action" rating 8.7 votes 1127635
+
+HSET movies:11003 title "The Godfather" plot "The aging patriarch of an organized crime dynasty transfers control of his empire to his son." release_year 1972 genre "Drama" rating 9.2 votes 1563839 
+```
+
+次に、 `FT.CREATE` コマンドで RediSearch のインデックスを作る
+(このFTというのがプラグインで追加されたコマンドのネームスペースと思われる)
+
+```sh
+> FT.CREATE idx:movies ON hash PREFIX 1 "movies:" SCHEMA title TEXT SORTABLE release_year NUMERIC SORTABLE rating NUMERIC SORTABLE genre TAG SORTABLE
+OK
+```
+
+# FT.CREATE
+- `idx:movies` : インデックスの名前。RediSeach のクエリをする際に使う
+- `ON hash` : インデックスされるデータの型。RediSeacrh 2.0 時点では hash のみ対応だが将来的に増える
+- `PREFIX 1 "movies:"` : インデックスされるキーのプレフィックス。 `PREFIX 2 ...` と続けると複数の prefix key からインデックスを作成できる
+- SCHEMA : インデックスされる has のフィールド。
+  - NUMERIC
+  - TEXT
+  - TAG : 空白を含まないトリムされた単語のstringのこと
+  - SORTABLE : これをつけるとソートできる。検索のスピードに影響
+
+要するに、RDB の インデックス機能により検索を実現する
+インデックス作成時、及びインデックス作成後に新しいデータを追加するたびにインデックスの更新が入るので
+書き込み性能が若干コストが高くなる代わりに読み取り or 検索性能が上がる
+
+# FT.SEARCH
+
+SQL に似た感じでクエリできる
+
+```sh
+FT.SEARCH idx:movies * SORTBY release_year ASC RETURN 2 title release_year
+1) (integer) 2
+2) "movies:11003"
+3) 1) "release_year"
+   2) "1972"
+   3) "title"
+   4) "The Godfather"
+4) "movies:11002"
+5) 1) "release_year"
+   2) "1980"
+   3) "title"
+   4) "Star Wars: Episode V - The Empire Strikes Back"
+
+FT.SEARCH idx:movies "star @genre:{action}" RETURN 2 title release_year
+...
+```
+
+戻り値は list
+[マッチした数, key1, hash1, key2, hash2 ...]
+
+## FT.SEARCH の Document
+
+コマンドリファレンス
+https://oss.redis.com/redisearch/master/Commands/#ftcreate
+
+更に詳細なチュートリアル
+https://developer.redis.com/howtos/moviesdatabase/query
+
+Tutorial github repo
+https://github.com/RediSearch/redisearch-getting-started/
+
+`RETURN num {field [AS property]} ...`
+数を指定する以外は、SQL の SELECT の columns っぽい
+hash の key を無視してワイルドカードですべて指定することはできない
+
+num = 0 にするとhash の value が return list から消える
+
+
+
