[nb] Edit: 20220118234132.md

--- a/20220118234132.md
+++ b/20220118234132.md
@@ -29,6 +29,7 @@ Prefix, OR など、正規表現や論理的な要素が入ると負ける
 # Hacker News による Redis vs Postgres
 
 https://news.ycombinator.com/item?id=27790024
+https://news.ycombinator.com/item?id=27784100
 
 電気自動車とガソリン車の比較になぞらえている
 
@@ -58,6 +59,20 @@ https://news.ycombinator.com/item?id=27790024
   - RedisJSON : MongoDB/RethinkDB
   - RedisGraph : Neo4J
   - RediSearch : ElasticSearch
+
+- コストの問題
+  - 一般的に、キャッシュとは高いが高速なストレージにデータを一時保存するというもの
+    - インメモリDBをプライマリDBとして使った場合、データが増えれば増えるほど費用がかさむことになる
+  - 車の例がそもそも間違ってる
+    - 熱効率で言えば、電気自動車が使っているバッテリーに充電されている電力の発電方法に着目しないといけない
+    - ガソリン車よりは効率的であろうが(25%くらい)、40 ~ 50% くらいでしか無い
+- Redis には Rollback 機能がない
+  - 並行処理
+  - インデックス制約
+    - といったことのために必要
+- Redis は実際にはあまり複雑な構造化を許さない
+- そもそもアプリケーションのだいたいの要件にはキャッシュは不要
+  - RDMS だけで行ける？
 
 結論
 SQL を話せたほうが便利
