[nb] Edit: 20220124163252.md

--- a/20220124163252.md
+++ b/20220124163252.md
@@ -1,1 +1,9 @@
-Tencent Signature versions
+# Tencent Signature versions
+
+#tencent
+
+- API 2.0 Signature
+- API 3.0 Signature V1
+- API 3.0 Signature V3
+
+
