[nb] Edit: 20230105152358.md

--- a/20230105152358.md
+++ b/20230105152358.md
@@ -2,3 +2,18 @@
 
 #php #package-manager
 
+
+# usage
+
+## composer.json
+
+まず、phpプロジェクトのセットアップにはcomposer.jsonが必要
+package.jsonみたいなもの
+シングルオブジェクトのjsonファイル
+
+- require : 依存パッケージリスト,バージョン
+
+
+tips
+- package name: {vender}/{package_name} のようにスラッシュで区切るのが一般的
+
