[nb] Edit: 20230105154539.md

--- a/20230105154539.md
+++ b/20230105154539.md
@@ -18,3 +18,10 @@ plug も dein も1 のタイプ
 その他のソースの場合や、バージョン指定はちょっと書き方を変えるだけ
 
 Plugを使っていくこととする
+
+# Install
+
+init.vim を編集しただけでは、プラグインはインストールされない
+nvim のコマンドで`:PlugInstall`を実行する
+もしくは、init.vimにプラグインがインストールされてるかをチェックするスクリプトを書く
+
