--- a/20230105152358.md
+++ b/20230105152358.md
@@ -14,3 +14,61 @@ package.jsonみたいなもの
 tips
 - package name: {vender}/{package_name} のようにスラッシュで区切るのが一般的
 
+# install
+
+```sh
+composer install
+# or
+composer update
+```
+
+これで一括インストール
+vendorディレクトリにインストールされる
+composer.lockが生成される
+
+## composer install vs update
+
+install は composer.lock を見て、無いものをインストールする
+update は composer.lock を見ないでインストールする(結果でcomposer.lockを更新)
+
+つまりlockに従うか否か
+基本はinstallでいい
+
+# packagist.org
+
+PHPのパッケージリポジトリ
+npmみたいなもの
+
+これがデフォルトで見に行くところ
+他の方法(Githubとか)でも公開できるが、これに公開したほうが速く見つけられる
+
+
+# platform packages
+
+composer ではインストールできないが、システムによってインストールされる
+仮想的なパッケージとして依存関係に書く
+
+- php: プロジェクトで使うPHPバージョン
+- hhvm: Hip Hop Virtual Machine. Facebookの開発したPHPの高速バージョンの実行環境
+- ext-* : PHP拡張モジュール
+- lib-* : PHPで使うライブラリ(dylib, dll, so). curl, iconv, icu, libxml, openssl, uuid など
+
+```sh
+composer show --platform
+```
+
+# Autoloading
+
+自動でローディングするライブラリを設定できる
+ライブラリによっては autoload infomationを提供していて、これをインクルードできる
+デフォルトで、 vendor/autoload.phpを生成する
+
+composer.json の autoload フィールドに自作ライブラリのautoloadを記述できる
+
+```sh
+composer dump-autoload
+```
+
+このコマンドを実行するとautoload.phpが生成される
+
+
