--- a/20230105152358.md
+++ b/20230105152358.md
@@ -72,3 +72,12 @@ composer dump-autoload
 このコマンドを実行するとautoload.phpが生成される
 
 
+
+## autoload できるもの
+
+Autoload は class のみ可能らしい
+class と ファイル名は一緒でなければならない
+
+https://qiita.com/k-motoyan/items/7bbaadc45e20ad7d4b4c
+
+
