[nb] Edit: 20230105152358.md

--- a/20230105152358.md
+++ b/20230105152358.md
@@ -70,7 +70,8 @@ composer dump-autoload
 ```
 
 このコマンドを実行するとautoload.phpが生成される
-
+composer.json に定義したトップレベルのネームスペースとローカルのパスを紐付けるだけなので、
+dumpができたら変更しても自動でautoloadに反映される
 
 
 ## autoload できるもの
@@ -80,4 +81,13 @@ class と ファイル名は一緒でなければならない
 
 https://qiita.com/k-motoyan/items/7bbaadc45e20ad7d4b4c
 
+function は autoload できない
+Namespace は autoload されるが、トップレベルは `psr-4` フィールドで定義したものになる
 
+関数型プログラミングのモジュール的なことをやりたければ、static method を持った class をモジュールとして使うしか無い
+
+# PHP Namespace
+
+- namespace 宣言をファイルに書かないとクラスがautoloadできない
+- ディレクトリ構造とネームスペースを合わせる必要がある
+- ファイル名は何でもいい(namespaceに含まない)
