--- a/20230107134117.md
+++ b/20230107134117.md
@@ -49,3 +49,31 @@ commit = join, be related with, do, promise, decide
 
 blank = ブレンク
 accord = 一致、合意 = contract, match
+
+novel = ナヴォ, (adj) new, remarkable
+modest = 控えめ, japanese people have a modest character.
+
+reception
+industry
+perform = carry out, do, execute
+wages = fee, payment, salary
+wonder if = think about, have daubt
+electricity = electric power
+
+worth doing
+medium = media or M-sized
+ecibint = イコノミー
+
+determine = decide, distinguish
+
+occur = アカー
+lead to success, led to success
+official = アフィシャル
+Hebrew is
+argue = claim, maintain
+decade = デケイド
+ever before = 今までずっと
+ever after = これからずっと
+suffer from
+instance = example, insident, situation
+
