[nb] Edit: 20230131220715.md

--- a/20230131220715.md
+++ b/20230131220715.md
@@ -2,4 +2,37 @@
 
 #unreal
 
+settings > engine scalability settings > 画質
+
+Actor > すべてのゲームオブジェクトが継承するクラス
+
+Outliner > Level 内のすべてのActorのリスト
+
+# Platformer
+
+unreal engine 5 のトップメニューにある + ボタンからいろいろ追加できる
+Cube + 
+
+# Blueprint vs C++
+
+Blueprint
+- quick to change
+- beginner friendly
+- Easy to discover
+- tailor made > unreal 専用に作られている
+- designer/artist friendly
+
+C++
+- more concise
+- industry standard
+- High speed
+- access all areas
+- good for bigger proj
+
+bp + C++ works togather
+
+C++ : Unreal lib & User lib
+Blueprint : call libs
+
+
 
