--- a/20230131224526.md
+++ b/20230131224526.md
@@ -90,4 +90,33 @@ Cube ref > Get Static Mesh Component > Add Impulse > z 100,000
 
 # Blueprint Button
 
-グラフノード
+グラフノードっぽいアイコンのボタン
+
+シーンエディタの上部にあるものと、Actor のDetail に生えてるものがある
+前者はLevelレベルの、後者はActorレベルのblueprintを編集できる
+
+StaicMeshActor に BP をつけてみる
+
+# File Prefix
+UnrealEngine で扱うファイルは慣習的にprefixをつける
+Blueprint なら BP_....
+
+# Edit BP
+
+Sphere などのBPクラスを置き換える場合、すでに持っているActorを引き継ぐことができる
+
+- Detail
+  - Physics: simulate enable
+  - Material
+- EventGraph
+などを編集できる
+
+いわゆる、Unity-Prefab や Godot-Scene に近い
+
+# Spawning
+
+Level BPでやる
+(Level BPは肥大化しやすいのではないかという懸念...)
+
+
+
