--- a/20230131224526.md
+++ b/20230131224526.md
@@ -7,23 +7,21 @@ C++
 maximum
 starter contents
 
-
 # Starter Contents demo
 
-Maps > 
+Maps >
+
 - Advanced Lighting
 - Minimal Default > two chairs
 - StarterMap > some materials & physics & particles (fire & spark)
-
 
 # Level BP
 
 Cube + の横
 Open Level Blueprint
 
-
 Level は Unreal Engine における世界のトップレベルのクラス
-そこにAttachされた BP(スクリプト)
+そこに Attach された BP(スクリプト)
 
 タブが別ウィンドウで開かれるが、元のウィンドウにドロップしてドッキングできる
 
@@ -42,20 +40,20 @@ Execution Pin
 
 # Physics Simulation
 
-デフォルトではActorにPhysicsは働かない
-なぜならCPUコストが高い計算だから
+デフォルトでは Actor に Physics は働かない
+なぜなら CPU コストが高い計算だから
 
-Actorを選択 > Detail > Physics > Simulate Physics
+Actor を選択 > Detail > Physics > Simulate Physics
 
 ## Physics Mass
+
 Detail > Physics > Mass
 デフォルトだと自動計算されるが、ユーザーが任意に設定できる
-
 
 # Objects & References
 
 Object = Class のインスタンス
-C++ はOOPなので、Unreal Engine内部でもオブジェクトが多数ある
+C++ は OOP なので、Unreal Engine 内部でもオブジェクトが多数ある
 data + method
 
 Blueprint でも Node として使うことができる
@@ -65,14 +63,16 @@ Component = Object thaqt can go on an actor
 
 Level <- Actor <- Component の関係
 
-Level上のActorを選択するとDetailでActor,Componentのヒエラルキーが見れるが、
-Propeties ではActorを選択しているとコンポーネントの分まで全部見れて、Componentを選択しているとそのコンポーネントのもつ部分だけプロパティが見れる(Actor Propertyのサブセット)
+Level 上の Actor を選択すると Detail で Actor,Component のヒエラルキーが見れるが、
+Propeties では Actor を選択しているとコンポーネントの分まで全部見れて、Component を選択しているとそのコンポーネントのもつ部分だけプロパティが見れる(Actor Property のサブセット)
 
 ## example: Cube Actor
-Cube Actor には StaticMeshComponentがついている
-これがPhysics, Rendering などのプロパティを持つ
+
+Cube Actor には StaticMeshComponent がついている
+これが Physics, Rendering などのプロパティを持つ
 
 # References
+
 Object address on the computer memory
 
 Blueprint Event Graph で、Level にある Actor を選択した状態で右クリックすると
@@ -87,36 +87,152 @@ Cube Ref -> Get Static Mesh Component -> Get Math -> To String -> Print String
 Add > Event > Space bar
 Cube ref > Get Static Mesh Component > Add Impulse > z 100,000
 
-
 # Blueprint Button
 
 グラフノードっぽいアイコンのボタン
 
-シーンエディタの上部にあるものと、Actor のDetail に生えてるものがある
-前者はLevelレベルの、後者はActorレベルのblueprintを編集できる
+シーンエディタの上部にあるものと、Actor の Detail に生えてるものがある
+前者は Level レベルの、後者は Actor レベルの blueprint を編集できる
 
 StaicMeshActor に BP をつけてみる
 
 # File Prefix
-UnrealEngine で扱うファイルは慣習的にprefixをつける
-Blueprint なら BP_....
+
+UnrealEngine で扱うファイルは慣習的に prefix をつける
+Blueprint なら BP\_....
 
 # Edit BP
 
-Sphere などのBPクラスを置き換える場合、すでに持っているActorを引き継ぐことができる
+Sphere などの BP クラスを置き換える場合、すでに持っている Actor を引き継ぐことができる
 
 - Detail
   - Physics: simulate enable
   - Material
 - EventGraph
-などを編集できる
+  などを編集できる
 
 いわゆる、Unity-Prefab や Godot-Scene に近い
 
 # Spawning
 
-Level BPでやる
-(Level BPは肥大化しやすいのではないかという懸念...)
+Level BP でやる
+(Level BP は肥大化しやすいのではないかという懸念...)
 
+# F8 - eject
 
+press F8 while playing game, move free camera around level
+then, detatched player controller and enter normal editor contorol
 
+If you want to atach controller to resume play, press F8 again.
+
+# DefaultPawn
+
+Pawn = same in Chess's
+
+this object pawned when game started from `PlayerStart` Actor
+
+DefaultPawn has sphere shape in default.
+
+# BP Get player pawn
+
+Player pawn is configued by game mode.
+
+Player index is used in multiplayer mode.
+return value is Pawn Object.
+
+# Controle Rotation
+
+## DefaultPawn Rotation
+
+DefaultPawn does'nt follow camera rotation.
+So, to align projectile to aim, use other rotation.
+
+# Get Control Rotation
+
+Control rotation = Camera rotation ?
+
+# Vector addition & multiply
+
+Vector = Direction + Magnitude (Mathematicaly)
+
+# Get Forward Vector
+
+Get Actor Rotation -> Get Foward Vector
+or
+Get Actor Forward Vector
+
+later is faivorable(complete in 1 node)
+
+## Multiply Node + Convert Pin
+
+right click Multiply data pin > Convert to float
+
+Vector, integer, float is compatible
+so, set 1 float is equal to set 3 value vector
+
+# Import Asset
+
+Free Asset > Industry Props Pack vol.6
+
+Maps > ShowCase : Usefull check assets.
+
+# BSP: Geometry Brush
+
+File > New Level > Basic
+
+then, remove default floor.
+Use BSP(Binary Space Partitioning), Unreal Geometry Brush to create Level.
+
+Cube+ (Quick Add) > Place Actors Panel
+
+Place Actoers Panel btn adds UnrealEditor a panel which lists actors which can be placed in level.
+
+Geometry >
+
+## brush style
+
+- add
+- carve out
+
+carve = dig, slice, substruct
+
+we can create a room by adding box & curved out box space
+so place 2 box
+
+## edit box brush
+
+Don't touch scale.
+Should edit Brush Settings > xyz
+
+## Unreal unit
+
+1 cm
+
+Walls: 36m x 29m x 9.6m, brush_type = additive
+WallsSubtract: -2m per dimension, brush_type - subtractive,
+
+## Default Maps
+
+Edit > Project Settings... > Default Map > Main
+
+## Copy & Paste Level BP
+
+open Minimum_Defaults > Level BP > select all > copy
+open Main Level > Open Level BP > Paste
+
+it's able to copy all game logic to another level
+
+# Material
+
+Faces created by GeometryBrush can be applied a material for each faces.
+StartarContents > Materials > something > D&D wall face
+
+# Lighting
+
+defaultly added to Level
+
+- DirectionalLight : Main Light which able to rotate direction
+- ExponentialHeightFog : under world sky color
+- SkyAtmosphere : sky color
+- SkyLight : overwhole light
+- SM_SkyShere : Static Sphere Mesh which is very very big & surround over level
